--- a/src/CollectdWinService/config/CollectdWin.config
+++ b/src/CollectdWinService/config/CollectdWin.config
@@ -9,6 +9,7 @@
     <Plugin Name="Amqp" Class="BloombergFLP.CollectdWin.AmqpPlugin" Enable="false" />
     <Plugin Name="WriteHttp" Class="BloombergFLP.CollectdWin.WriteHttpPlugin" Enable="false" />
     <Plugin Name="Console" Class="BloombergFLP.CollectdWin.ConsolePlugin" Enable="true" />
+	<Plugin Name="WriteGraphite" Class="BloombergFLP.CollectdWin.WriteGraphitePlugin" Enable="true" />
   </Plugins>
 
 </CollectdWinConfig>
