--- a/src/CollectdWinService/app.config
+++ b/src/CollectdWinService/app.config
@@ -10,6 +10,7 @@
     <section name="Statsd" type="BloombergFLP.CollectdWin.StatsdPluginConfig, CollectdWinService" />
     <section name="Amqp" type="BloombergFLP.CollectdWin.AmqpPluginConfig, CollectdWinService" />
     <section name="WriteHttp" type="BloombergFLP.CollectdWin.WriteHttpPluginConfig, CollectdWinService" />
+	  <section name="WriteGraphite" type="BloombergFLP.CollectdWin.WriteGraphitePluginConfig, CollectdWinService" />
   </configSections>
 
   <!-- As per https://msdn.microsoft.com/en-us/library/jj152935(v=vs.110).aspx :
@@ -33,5 +34,5 @@
   <Statsd configSource="config\Statsd.config" />
   <Amqp configSource="config\Amqp.config" />
   <WriteHttp configSource="config\WriteHttp.config" />
-
+  <WriteGraphite configSource="config\WriteGraphite.config" />
 </configuration>
