added stats for asp.net to perf counter config

--- a/src/CollectdWinService/config/WindowsPerformanceCounter.config
+++ b/src/CollectdWinService/config/WindowsPerformanceCounter.config
@@ -49,5 +49,28 @@
              CollectdPlugin="interface" CollectdType="if_octets" CollectdTypeInstance="" />
     <Counter Category="Network Interface" Name="Packets Received Errors,Packets Outbound Errors" Instance="*"
              CollectdPlugin="interface" CollectdType="if_errors" CollectdTypeInstance="" />
+	  
+	  
+	 <!-- web server -->
+	  <Counter Category="ASP.NET" Name="Requests Queued" Instance=""
+             CollectdPlugin="aspnet" CollectdType="gauge" CollectdTypeInstance="requests_queued" />
+	  <Counter Category="ASP.NET" Name="Request Wait Time" Instance=""
+			CollectdPlugin="aspnet" CollectdType="gauge" CollectdTypeInstance="request_last_wait_time" />
+	  <Counter Category="ASP.NET" Name="Request Execution Time" Instance=""
+			CollectdPlugin="aspnet" CollectdType="gauge" CollectdTypeInstance="request_last_execution_time" />
+	  
+	  <Counter Category="ASP.NET Applications" Name="Errors Total" Instance="__Total__"
+             CollectdPlugin="aspnet" CollectdType="counter" CollectdTypeInstance="errors_total" />
+	  <Counter Category="ASP.NET Applications" Name="Requests Total" Instance="__Total__"
+             CollectdPlugin="aspnet" CollectdType="counter" CollectdTypeInstance="requests_total" />
+	  <Counter Category="ASP.NET Applications" Name="Requests Total (WebSockets)" Instance="__Total__"
+			CollectdPlugin="aspnet" CollectdType="counter" CollectdTypeInstance="requests_websockets_total" />
+
+	  <Counter Category="Web Service" Name="Total Get Requests" Instance="_Total"
+             CollectdPlugin="aspnet" CollectdType="counter" CollectdTypeInstance="requests_get_total" />
+	  <Counter Category="Web Service" Name="Total Post Requests" Instance="_Total"
+             CollectdPlugin="aspnet" CollectdType="counter" CollectdTypeInstance="requests_post_total" />
+	  <Counter Category="Web Service" Name="Current Connections" Instance="_Total"
+			CollectdPlugin="aspnet" CollectdType="gauge" CollectdTypeInstance="current_connections" />
   </Counters>
 </WindowsPerformanceCounter>
